added i18n for repository module

--- a/scm-ui/public/locales/en/commons.json
+++ b/scm-ui/public/locales/en/commons.json
@@ -29,6 +29,7 @@
     "alt": "SCM-Manager"
   },
   "primary-navigation": {
+    "repositories": "Repositories",
     "users": "Users",
     "logout": "Logout"
   }
