--- a/scm-ui/public/locales/en/repositories.json
+++ b/scm-ui/public/locales/en/repositories.json
@@ -1,6 +1,7 @@
 {
   "repositories": {
     "title": "Repositories",
-    "subtitle": "Repositories will be shown here"
+    "subtitle": "Repositories will be shown here",
+    "body": "Coming soon ..."
   }
 }
