start implementation of pagination for users

--- a/scm-ui/public/locales/en/commons.json
+++ b/scm-ui/public/locales/en/commons.json
@@ -32,5 +32,9 @@
     "repositories": "Repositories",
     "users": "Users",
     "logout": "Logout"
+  },
+  "paginator": {
+    "next": "Next",
+    "previous": "Previous"
   }
 }
