--- a/scm-ui/public/locales/en/users.json
+++ b/scm-ui/public/locales/en/users.json
@@ -9,8 +9,10 @@
   },
   "users": {
     "title": "Users",
-    "subtitle": "Create, read, update and delete users",
-    "add-button": "Add User"
+    "subtitle": "Create, read, update and delete users"
+  },
+  "create-user-button": {
+    "label": "Create"
   },
   "delete-user-button": {
     "label": "Delete",
