added first routing and mock for groups page

--- a/scm-ui/public/locales/en/commons.json
+++ b/scm-ui/public/locales/en/commons.json
@@ -31,7 +31,8 @@
   "primary-navigation": {
     "repositories": "Repositories",
     "users": "Users",
-    "logout": "Logout"
+    "logout": "Logout",
+    "groups": "Groups"
   },
   "paginator": {
     "next": "Next",
