Bootstrapped AddGroup and GroupForm

--- a/scm-ui/public/locales/en/groups.json
+++ b/scm-ui/public/locales/en/groups.json
@@ -6,5 +6,9 @@
   "groups": {
     "title": "Groups",
     "subtitle": "Create, read, update and delete groups"
+  },
+  "add-group": {
+    "title": "Create Group",
+    "subtitle": "Create a new group"
   }
 }
