start implementation repository details

--- a/scm-ui/public/locales/en/repos.json
+++ b/scm-ui/public/locales/en/repos.json
@@ -2,5 +2,9 @@
   "overview": {
     "title": "Repositories",
     "subtitle": "Overview of available repositories"
+  },
+  "repository-root": {
+    "error-title": "Error",
+    "error-subtitle": "Unknown repository error"
   }
 }
