--- a/scm-ui/public/locales/en/groups.json
+++ b/scm-ui/public/locales/en/groups.json
@@ -26,6 +26,9 @@
   "create-group-button": {
     "label": "Create group"
   },
+  "edit-group-button": {
+    "label": "Edit"
+  },
   "group-form": {
     "submit": "Submit"
   }
